--- a/package.json
+++ b/package.json
@@ -42,8 +42,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-flow": "^7.24.1",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@react-three/fiber": "^8.16.6",
     "autoprefixer": "^10.4.19",
+    "konva": "^9.3.11",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "react-konva": "^18.2.10",
+    "react-native": "^0.74.1",
+    "react-zdog": "^1.2.2",
+    "tailwindcss": "^3.4.3",
+    "three": "^0.164.1",
+    "typescript": "^5.4.5",
+    "zdog": "^1.1.3"
   }
 }
